Alignment fixes

--- a/public/stylesheets/layouts/home.scss
+++ b/public/stylesheets/layouts/home.scss
@@ -1,6 +1,6 @@
 
 section {
-    padding: 40px 0;
+    padding: 10px 0 40px 0;
     margin-bottom: 30px;
 }
 
@@ -32,7 +32,7 @@ section {
 
     .panel-body {
         background: #fff;
-        border-left: 1px solid #b00;
+        border-left: 1px solid #c00;
         box-shadow: inset 0px 0px 5px #ccc;
     }
 }
