--- a/public/stylesheets/partials/header.scss
+++ b/public/stylesheets/partials/header.scss
@@ -34,7 +34,7 @@ body > header {
         color: #fff !important;
         display: table;
         padding: 10px 20px;
-        background: rgba(200,0,0,0.8);
+        background: rgba(204,0,0,0.8);
     }
 
     p {
